--- a/Frameworks/Checks/README
+++ b/Frameworks/Checks/README
@@ -1,3 +1,5 @@
+##Checks framework
+
 This framework using annotations, it is for adding
 in an easy way functionality to function,
 in spasipc for checking conditions on an argument of
@@ -6,8 +8,8 @@ if the condition is not vaild
     
 #===================================================
 
-Example 1:
-check if the argument if a integer
+##Example 1:
+##check if the argument if a integer
 
 @check
 def print_integer(number : IsInteger):
@@ -19,7 +21,7 @@ rasie an error is its not Integer
 
 #===================================================
 
-Example 2:
+##Example 2:
 check if first argument is a number
 bigger than 10
 and second arg is string
@@ -36,7 +38,7 @@ so in this example it will execute like this: BiggerThan(number, 10)
 
 #===================================================
 
-Example 3 - custom annotation functions :
+##Example 3 - custom annotation functions :
 Lets create a function that check if a number is in some sort of range
 To do that there is 1 function you need to import, and the check
 decorator to execute the annotation,here is the full program:
@@ -66,4 +68,4 @@ Then we create a custom message that will raise if the condition doesnt work
 and those main function that makes it append is check_annotation_error(condition, message)
 its check the condition and if its false ,raise an error with that message
 
-This framework make it clean and easy coding
+##This framework make it clean and easy coding
